k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: movie-api}
spec:
  replicas: 4
