k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: movie-api-service

spec:

  selector:
    app: movie-api

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
