k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: movie-api-ingress

spec:

  defaultBackend:

    service:
      name: movie-api-service

      port:
        number: 80
